<resources>
    <string name="app_name">ImmVRse</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_up">Don\'t have an account? Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="sign_up_2">Sign Up</string>
    <string name="title_activity_onboarding">Onboarding</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="discover_vr_content">Discover VR Content</string>
    <string name="onboarding_description">Find VR content from a range of different categories \nand connect with talented creators</string>
    <string name="token">Use our own token</string>
    <string name="not_now">Not Now</string>
    <string name="purchase_imv">Purchase IMV</string>
    <string name="decentralised_data">Decentralised Data</string>
    <string name="decentralised_data_description">ImmVRse enables decentralised data storage, \ntherefore your data and information is encrypted \nand safe. All transactions are recorded with highest \nlevel of encryption on blockchain.</string>
    <string name="get_started">Get started</string>
    <string name="onboarding_four_title">What kind of videos are you interested in?</string>
    <string name="onboarding_four_description">Get recommendations of VR content based on your preferences</string>
    <string name="film">Film</string>
    <string name="continue_text">Continue</string>
    <string name="music">Music</string>
    <string name="food">Food</string>
    <string name="concert">Concerts</string>
    <string name="location">Your Location</string>
    <string name="location_description">Get recommendations of VR content based on your preferences</string>
    <string name="location_button_text">Add your location</string>
    <string name="news_feed">News Feed</string>
    <string name="name_placeholder">Name</string>
    <string name="post_time_placeholder">Post Time</string>
    <string name="post_description">Get recommendations of VR content based on your preferences</string>
    <string name="title_activity_news">NewsActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_title">John Doe</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="activity">Activity</string>
    <string name="favourites">Favourites</string>
    <string name="connections">Connections</string>
    <string name="logout">Logout</string>
    <string name="title_activity_menu_navigation">MenuNavigationActivity</string>
    <string name="volume">Volume</string>
    <string name="wallet">Wallet</string>
    <string name="category_travel">Travel</string>
    <string name="thank_you_for_signing_up">Thank You For Signing Up</string>
    <string name="registration_success_description">You will receive a notification as soon as our DApp is live.  In the mean time, why not check out or website and join our ICO to be part of this revolution?</string>
    <string name="queue_title">Your Queue Number is:</string>
    <string name="queue_placeholder">6,058</string>
    <string name="join_ico">Join ICO</string>
</resources>
