<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.samson.immvrse.NewsActivity">

    <item
        android:id="@+id/home"
        android:orderInCategory="1"
        android:title="@string/home"
        android:icon="@drawable/home_mdpi" />
    <item
        android:id="@+id/profile"
        android:orderInCategory="2"
        android:title="@string/profile"
        android:icon="@drawable/profile_mdpi"/>

    <item
        android:id="@+id/message"
        android:orderInCategory="3"
        android:title="@string/message"
        android:icon="@drawable/chat_xxxhdpi"/>

    <item
        android:id="@+id/activity"
        android:orderInCategory="4"
        android:title="@string/activity"
        android:icon="@drawable/notifications_mdpi"/>

    <item
        android:id="@+id/favourites"
        android:orderInCategory="5"
        android:title="@string/favourites"
        android:icon="@drawable/favorites_mdpi"/>

    <item
        android:id="@+id/connections"
        android:orderInCategory="6"
        android:title="@string/connections"
        android:icon="@drawable/connections_mpdi"/>

    <item
        android:id="@+id/wallet"
        android:orderInCategory="7"
        android:title="@string/wallet"
        android:icon="@drawable/wallet_mdpi"/>

    <item
        android:id="@+id/logout"
        android:orderInCategory="8"
        android:title="@string/logout"
        android:icon="@drawable/logout_mdpi"/>
</menu>
