 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:checkableBehavior="single">

         <item
             android:id="@+id/action_example"
             app:showAsAction="withText|ifRoom"
             android:title="@string/action_example" />

         <item
             android:id="@+id/home"
             app:showAsAction="withText|ifRoom"
             android:title="@string/home"
             android:orderInCategory="1"
             android:icon="@drawable/house_xxxhdpi"/>
         <item
             android:id="@+id/profile"
             android:orderInCategory="2"
             app:showAsAction="withText|ifRoom"
             android:title="@string/profile"
             android:icon="@drawable/profile_photo_xxxhdpi"/>

         <item
             android:id="@+id/message"
             android:orderInCategory="3"
             android:title="@string/message"
             android:icon="@drawable/chat_xxxhdpi"/>

         <item
             android:id="@+id/activity"
             android:orderInCategory="4"
             android:title="@string/activity"
             android:icon="@drawable/notifications_xxxhdpi"/>

         <item
             android:id="@+id/favourites"
             android:orderInCategory="5"
             android:title="@string/favourites"
             android:icon="@drawable/star_xxxhdpi"/>

         <item
             android:id="@+id/connections"
             android:orderInCategory="6"
             app:showAsAction="withText|ifRoom"
             android:title="@string/connections"
             android:icon="@drawable/users_xxxhdpi"/>

         <item
             android:id="@+id/logout"
             android:orderInCategory="7"
             android:title="@string/logout"
             android:icon="@drawable/logout_xxxhdpi"/>
     </group>
 </menu>
