<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sign_up_background"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/logo_height"
            android:src="@drawable/logo_transparent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_perm_identity_white_18dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/full_name"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_mail_outline_white_18dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColorHint="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/full_name" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_lock_outline_white_18dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edit_text_margin_top"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_lock_outline_white_18dp"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/standard_button_height"
            android:layout_marginTop="@dimen/margin_top_medium"
            android:background="@drawable/rounded_button_yellow"
            android:elevation="@dimen/button_elevation"
            android:text="@string/sign_up_2"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/confirm_password" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/already_have_an_account_sign_in"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>