<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_blue"
        android:padding="@dimen/padding_standard">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_small"
            android:text="@string/thank_you_for_signing_up"
            android:textSize="@dimen/title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_medium"
            android:text="@string/registration_success_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="280dp"
            android:layout_marginTop="@dimen/margin_top_medium"
            android:src="@drawable/registration_success"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <TextView
            android:id="@+id/queue_number_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/queue_title"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <TextView
            android:id="@+id/queue_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff7500"
            android:padding="@dimen/button_padding"
            android:text="@string/queue_placeholder"
            android:textAlignment="center"
            android:textSize="@dimen/title_size"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/queue_number_title"
            android:layout_marginTop="@dimen/margin_top_small"/>

        <Button
            android:id="@+id/button"
            android:layout_height="@dimen/button_height_standard"
            android:layout_width="@dimen/button_width"
            android:background="@drawable/rounded_button_yellow"
            app:layout_constraintTop_toBottomOf="@id/queue_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Join ICO"
            android:layout_marginTop="@dimen/margin_top_small"/>


    </android.support.constraint.ConstraintLayout>
</layout>