<layout>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_token"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="com.example.samson.immvrse.OnboardingActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/token"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="150dp"
        android:text="@string/token_description"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <Button
        android:id="@+id/not_now_button"
        android:layout_width="140dp"
        android:layout_height="@dimen/standard_button_height"
        android:background="@drawable/rounded_button_grey"
        android:text="@string/not_now"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <Button
        android:id="@+id/purchase_imv_button"
        android:layout_width="140dp"
        android:layout_height="@dimen/standard_button_height"
        android:background="@drawable/rounded_button_yellow"
        android:layout_marginLeft="10dp"
        android:text="@string/purchase_imv"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/not_now_button"
        app:layout_constraintTop_toBottomOf="@id/description" />


</android.support.constraint.ConstraintLayout>
</layout>